--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "Instagram": "chris.tianid",
-  "botName": "Izumi - MD",
+  "ownerNumber": ["6281273677810@s.whatsapp.net","6281959293465@s.whatsapp.net"],
+  "ownerName": ["PRATAMA MULTIDEVICE"],
+  "Instagram": "@arrezza20",
+  "botName": "PRATAMA - MD",
   "sessionName": "session",
   "pathimg": "./media/chris2.jpg",
   "gamewaktu": 90,
